--- a/browser/js/members-only/members-only.html
+++ b/browser/js/members-only/members-only.html
@@ -2,5 +2,6 @@
     <p>
         Welcome to your custom Account page
     </p>
-    <div> Welcome, {{Account.firstname}}!
+    <div ng-repeat="Account in Accounts"> Welcome, {{Account.firstname}}!
     </div>
+ </section>
