--- a/browser/js/members-only/members-only.html
+++ b/browser/js/members-only/members-only.html
@@ -1,4 +1,4 @@
 <section id="members-area">
-    <div> Welcome, {{Account.firstname}}!
+    <div> Welcome, {{account.firstName}}!
     </div>
 </section>
