--- a/browser/js/Product/product.html
+++ b/browser/js/Product/product.html
@@ -1,6 +1,10 @@
 <section id="product">
-    <rando-greeting></rando-greeting>
-    <div> {{ product.name }} {{product.category}}</a> <p class="price">$ {{ product.price }}</p>	
-    	<a href='http://localhost:1337/api/products/'+ {{ product.id }}'><img src='{{ product.imageUrl }}' height="200" width="200"> </a></img>
+    <div>
+        <h3> {{ product.name }} {{product.category}} </h3>
+        <p class="price">{{ product.price / 100 | currency}}</p>
+        <img src="{{ product.imageUrl }}" height="200" width="200"></img>
+    </div>
+    <div>
+        <button ng-click="Cart.add(product.id, 1)">Add to cart.</button>
     </div>
 </section>
