--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,4 @@
-<section id="home">
+<!-- <section id="home">
     <rando-greeting></rando-greeting>
     <div ng-repeat="product in products">
     <a class="images" ui-sref="product({id: product.id})"> {{ product.name }} {{product.category}}</a>
@@ -8,4 +8,88 @@
         </img>
     </a>
     </div>
-</section>
+</section> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+
+    <title>Shop Homepage - Start Bootstrap Template</title>
+
+</head>
+
+<body>
+
+    <center><rando-greeting></rando-greeting></center></br>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-3">
+                <div class="list-group">
+                    <a href="#" class="list-group-item">Category 1</a>
+                    <a href="#" class="list-group-item">Category 2</a>
+                    <a href="#" class="list-group-item">Category 3</a>
+                </div>
+            </div>
+
+            <div class="col-md-9">
+
+                <div class="row">
+                	<div ng-repeat="product in products">
+	                    <div class="col-sm-4 col-lg-4 col-md-4 product">
+	                        <div class="thumbnail">
+	                            
+	                            <div class="caption" ui-sref="product({id: product.id})">
+	                                
+	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" height="200"></img> {{ product.name }}</a>
+	                                </h4>
+	                                <h4 class="pull-right">$ {{ product.price }}</h4>
+	                                <p>{{ product.description }}.</p>
+	                            </div>
+	                            <div class="ratings">	                               
+	                                 rating: {{ product.rating }}
+	                            </div>
+	                        </div>
+	                    </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+    <!-- /.container -->
+
+    <div class="container">
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </footer>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
