--- a/browser/js/product/product.html
+++ b/browser/js/product/product.html
@@ -3,6 +3,7 @@
         <h3> {{ product.name }} {{product.category}} </h3>
         <p class="price">{{ product.price / 100 | currency}}</p>
         <img src="{{ product.imageUrl }}" height="200" width="200"></img>
+        <h3> Rating: {{ product.rating }} </h3>
     </div>
     <div>
         <button ng-click="Cart.add(product.id, 1)">Add to cart.</button>
