--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -44,17 +44,16 @@
                 <div class="row">
                 	<div ng-repeat="product in products">
 	                    <div class="col-sm-4 col-lg-4 col-md-4 product">
-	                        <div class="thumbnail">
-	                            
-	                            <div class="caption" ui-sref="product({id: product.id})">
-	                                
-	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" height="200"></img> {{ product.name }}</a>
+	                        <div class="thumbnail">                         
+	                            <div class="caption" ui-sref="product({id: product.id})">	               
+	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" class='img'></img> &nbsp;{{ product.name }}</a>
 	                                </h4>
-	                                <h4 class="pull-right">$ {{ product.price }}</h4>
+	                                <h4 >&nbsp;${{ product.price }}</h4></br></br></br>
 	                                <p>{{ product.description }}.</p>
 	                            </div>
 	                            <div class="ratings">	                               
-	                                 rating: {{ product.rating }}
+	                                 &nbsp; 
+                                     rating: {{ product.rating }}
 	                            </div>
 	                        </div>
 	                    </div>
@@ -71,12 +70,11 @@
     <div class="container">
 
         <hr>
-
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; King Pong 2016</p>
                 </div>
             </div>
         </footer>
