--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -24,22 +24,16 @@
 
 <body>
 
-    <center><rando-greeting></rando-greeting></center></br>
+    <div id="header">
+        <img src="header.jpg" id='headerImage'></img>
+    </div>
 
     <!-- Page Content -->
     <div class="container">
 
         <div class="row">
 
-            <div class="col-md-3">
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Category 1</a>
-                    <a href="#" class="list-group-item">Category 2</a>
-                    <a href="#" class="list-group-item">Category 3</a>
-                </div>
-            </div>
-
-            <div class="col-md-9">
+            <div class="col-md-">
 
                 <div class="row">
                 	<div ng-repeat="product in products">
