--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -30,29 +30,26 @@
     <div class="container">
 
         <div class="row">
-
             <div class="col-md-3">
-                <div class="list-group">
-                    <a href="#" class="list-group-item">Category 1</a>
-                    <a href="#" class="list-group-item">Category 2</a>
-                    <a href="#" class="list-group-item">Category 3</a>
-                </div>
+                <label> Search:
+                    <input ng-model="searchText.category">
+                </label>
             </div>
 
             <div class="col-md-9">
 
                 <div class="row">
-                	<div ng-repeat="product in products">
+                	<div ng-repeat="product in products | filter:searchText:strict">
 	                    <div class="col-sm-4 col-lg-4 col-md-4 product">
-	                        <div class="thumbnail">                         
-	                            <div class="caption" ui-sref="product({id: product.id})">	               
+	                        <div class="thumbnail">
+	                            <div class="caption" ui-sref="product({id: product.id})">
 	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" class='img'></img> &nbsp;{{ product.name }}</a>
 	                                </h4>
 	                                <h4 >&nbsp;${{ product.price }}</h4></br></br></br>
 	                                <p>{{ product.description }}.</p>
 	                            </div>
-	                            <div class="ratings">	                               
-	                                 &nbsp; 
+	                            <div class="ratings">
+	                                 &nbsp;
                                      rating: {{ product.rating }}
 	                            </div>
 	                        </div>
