--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -11,7 +11,7 @@
               </a>
             </li>
             <li>
-              <a ui-sref-active="active" ui-sref="orders">
+              <a ui-sref-active="active" ui-sref="order">
                   <span class="glyphicon glyphicon-tasks"></span>
                   Orders 
               </a>
