--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -31,32 +31,37 @@
     <!-- Page Content -->
     <div class="container">
 
-<!--         <div class="row">
+        <div class="row">
             <div class="col-md-3">
-                <label> Search:
-                    <input ng-model="searchText.category">
-                </label>
+                <select ng-model="selectedCategory.category">
+                    <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
+                </select>
+                <select ng-model="selectedOrder">
+                    <option ng-repeat="orderOption in orderOptions" value="{{orderOption}}"> {{ orderOption }}</option>
+                </select> 
+                <select ng-model="selectedAscDesc">
+                    <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
+                </select> 
             </div>
- -->
-    <div class="col-xs-12">
-                    <div class="row">
-                    	<div ng-repeat="product in products | filter:searchText:strict">
-    	                    <div class="col-sm-6 col-lg-4 col-md-4 product">
-    	                        <div class="thumbnail">
-    	                            <div class="caption" ui-sref="product({id: product.id})">
-    	                                <h4><a class="productLink" href="http://localhost:1337/api/products/"+ {{ product.id }}>
-                                                <img src="{{ product.imageUrl }}" class='prodIcon'></img> 
-                                                &nbsp;{{ product.name }}</a>
-    	                                </h4>
-    	                                <h4 >&nbsp;${{ product.price }}</h4><br>
-    	                            </div>
-    	                            <div class="ratings">
-    	                                 &nbsp;
-                                         Rating: {{ product.rating }} / 5.0
-    	                            </div>
-    	                        </div>
-    	                    </div>
-                        </div>
+
+            <div class="col-md-9">
+
+                <div class="row">
+                	<div ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
+	                    <div class="col-sm-4 col-lg-4 col-md-4 product">
+	                        <div class="thumbnail">
+	                            <div class="caption" ui-sref="product({id: product.id})">
+	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" class='img'></img> &nbsp;{{ product.name }}</a>
+	                                </h4>
+	                                <h4 >&nbsp;${{ product.price }}</h4></br></br></br>
+	                                <p>{{ product.description }}.</p>
+	                            </div>
+	                            <div class="ratings">
+	                                 &nbsp;
+                                     rating: {{ product.rating }}
+	                            </div>
+	                        </div>
+	                    </div>
                     </div>
 
                 </div>
