--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -24,52 +24,57 @@
 
 <body>
     <section id="home">
-    <div class="col-xs-12" id="upperHome">
-        <img src="../media/king-pong-header.jpg" id='headerImage'></img>
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1" id="upperHome">
+            <img src="../media/king-pong-header.jpg">
+        </div>
     </div>
 
-    <!-- Page Content -->
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-3">
-                <select ng-model="selectedCategory.category">
-                    <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
-                </select>
-                <select ng-model="selectedOrder">
-                    <option ng-repeat="orderOption in orderOptions" value="{{orderOption}}"> {{ orderOption }}</option>
-                </select> 
-                <select ng-model="selectedAscDesc">
-                    <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
-                </select> 
-            </div>
-
-            <div class="col-md-9">
-
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 filterPanel">
+            <div class="form-group">
                 <div class="row">
-                	<div ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
-	                    <div class="col-sm-4 col-lg-4 col-md-4 product">
-	                        <div class="thumbnail">
-	                            <div class="caption" ui-sref="product({id: product.id})">
-	                                <h4><a href="http://localhost:1337/api/products/"+ {{ product.id }}><img src="{{ product.imageUrl }}" class='img'></img> &nbsp;{{ product.name }}</a>
-	                                </h4>
-	                                <h4 >&nbsp;${{ product.price }}</h4></br></br></br>
-	                                <p>{{ product.description }}.</p>
-	                            </div>
-	                            <div class="ratings">
-	                                 &nbsp;
-                                     rating: {{ product.rating }}
-	                            </div>
-	                        </div>
-	                    </div>
+                    <div class = "hidden-sm col-lg-2"></div>
+                    <div class="col-sm-12 col-md-6 col-lg-2">
+                        <label class="filterLabel">Sort Selections By: </label>
                     </div>
-
+                    <div class="col-sm-12 col-md-6 col-lg-2">
+                        <select ng-init="selectedCategory.category = categories[0]" ng-model="selectedCategory.category" class="filterBox form-control">
+                            <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-2">
+                        <select ng-init="selectedOrder = orderOptions[0]" ng-model="selectedOrder" class="filterBox form-control">
+                            <option ng-repeat="orderOption in orderOptions" value="{{orderOption}}"> {{ orderOption }}</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-2">
+                        <select ng-init="selectedAscDesc = ascDescOptions[0]" ng-model="selectedAscDesc" class="filterBox form-control">
+                            <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
+                        </select> 
+                    </div>
+                    <div class = "hidden-sm col-lg-2"></div>
                 </div>
-
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1" class="lowerHome">
+        	<div class="col-sm-12 col-md-6 col-lg-4 product" ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
+                <img src="{{ product.imageUrl }}" class='prodIcon'>
+                <div class="prodDescript">
+                    <h4><label class="productLabel">The {{ product.name }} {{ product.category }}</label></h4>
+                    <h4>${{ product.price }}</h4>
+                    <h4>{{ product.rating }} / 5.0</h4>
+                    <br>
+                    <button type="button" class="btn btn-primary productsBtn" ui-sref="product({id: product.id})">View Item</button>
+                    <button type="button" class="btn btn-success productsBtn" ui-sref="product({id: product.id})">Add to Cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
     </section>
 
-        </div>
     <!-- /.container -->
 
     <div class="container">
