--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -25,8 +25,8 @@
 <body>
     <section id="home">
     <div class="row">
-        <div class="col-xs-10 col-xs-offset-1" id="upperHome">
-            <img src="../media/king-pong-header.jpg">
+        <div class="col-xs-10 col-xs-offset-1 upperHome">
+            <img src="../media/king-pong-header.png">
         </div>
     </div>
 
@@ -34,26 +34,36 @@
         <div class="col-xs-10 col-xs-offset-1 filterPanel">
             <div class="form-group">
                 <div class="row">
-                    <div class = "hidden-sm col-lg-2"></div>
-                    <div class="col-sm-12 col-md-6 col-lg-2">
+                    <label class="filterLabel">Sort Selections By: </label>
+                    <select ng-init="selectedCategory.category = categories[0]" ng-model="selectedCategory.category" class="filterBox form-control">
+                        <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
+                    </select>
+                     <select ng-init="selectedOrder = orderOptions[0]" ng-model="selectedOrder" class="filterBox form-control">
+                        <option ng-repeat="orderOption in orderOptions" value="{{orderOption}}"> {{ orderOption }}</option>
+                    </select>                       
+                    <select ng-init="selectedAscDesc = ascDescOptions[0]" ng-model="selectedAscDesc" class="filterBoxLast form-control">
+                        <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
+                    </select>
+<!-- 
+                    <div class="col-sm-12 col-xs-12 hidden-md hidden-lg filterPanelXsSm">
                         <label class="filterLabel">Sort Selections By: </label>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-2">
+                    <div class="col-sm-12 col-xs-12 hidden-md hidden-lg filterPanelXsSm" >
                         <select ng-init="selectedCategory.category = categories[0]" ng-model="selectedCategory.category" class="filterBox form-control">
                             <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
                         </select>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-2">
+                    <div class="col-sm-12 col-xs-12 hidden-md hidden-lg filterPanelXsSm" >
                         <select ng-init="selectedOrder = orderOptions[0]" ng-model="selectedOrder" class="filterBox form-control">
                             <option ng-repeat="orderOption in orderOptions" value="{{orderOption}}"> {{ orderOption }}</option>
                         </select>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-2">
-                        <select ng-init="selectedAscDesc = ascDescOptions[0]" ng-model="selectedAscDesc" class="filterBox form-control">
+                    <div class="col-sm-12 col-xs-12 hidden-md hidden-lg filterPanelXsSm" >
+                        <select ng-init="selectedAscDesc = ascDescOptions[0]" ng-model="selectedAscDesc" class="filterBoxLast form-control">
                             <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
                         </select> 
                     </div>
-                    <div class = "hidden-sm col-lg-2"></div>
+ -->
                 </div>
             </div>
         </div>
@@ -61,14 +71,18 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1" class="lowerHome">
         	<div class="col-sm-12 col-md-6 col-lg-4 product" ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
-                <img src="{{ product.imageUrl }}" class='prodIcon'>
-                <div class="prodDescript">
-                    <h4><label class="productLabel">The {{ product.name }} {{ product.category }}</label></h4>
-                    <h4>${{ product.price }}</h4>
-                    <h4>{{ product.rating }} / 5.0</h4>
-                    <br>
-                    <button type="button" class="btn btn-primary productsBtn" ui-sref="product({id: product.id})">View Item</button>
-                    <button type="button" class="btn btn-success productsBtn" ui-sref="product({id: product.id})">Add to Cart</button>
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 col-lg-6 prodImage">
+                        <img src="{{ product.imageUrl }}">
+                    </div>
+                    <div class="col-xs-12 col-md-12 col-lg-6 prodDescript">
+                        <h4><label class="productLabel">The {{ product.name }} {{ product.category }}</label></h4>
+                        <h4>${{ product.price }}</h4>
+                        <h4>{{ product.rating }} / 5.0</h4>
+                        <br>
+                        <button type="button" class="btn btn-success productsBtn" ui-sref="product({id: product.id})">View Item</button>
+                        <button type="button" class="btn btn-danger productsBtn" ng-click="Cart.add(product.id, 1)">Add to Cart</button>
+                    </div>
                 </div>
             </div>
         </div>
