--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -76,7 +76,7 @@
                         <img src="{{ product.imageUrl }}">
                     </div>
                     <div class="col-xs-12 col-md-12 col-lg-6 prodDescript">
-                        <h4><label class="productLabel">The {{ product.name }} {{ product.category }}</label></h4>
+                        <h4 class="productLabel">{{ product.name }}<br> {{ product.category }}</h4>
                         <h4>${{ product.price }}</h4>
                         <h4>{{ product.rating }} / 5.0</h4>
                         <br>
