--- a/browser/js/order/order.html
+++ b/browser/js/order/order.html
@@ -1,5 +1,5 @@
 <section id="order">
-    Your Order history
+    <h1>Your Order history</h1>
     <div ng-repeat="order in orders">
     	<img src="{{ order.productDetail.imageUrl }}" height=80 ><br>
     	You have bought {{ order.productDetail.name }}
