--- a/browser/js/product/product.html
+++ b/browser/js/product/product.html
@@ -22,7 +22,8 @@
     <div class="col-xs-10 col-xs-offset-1 lowerProduct">
     	<h4>User Reviews for this product:</h4>
       <div class="review" ng-repeat="review in reviews">
-        <label>{{ review.title }}</label> 
+        <label>{{ review.title }}</label> by 
+        <label>{{ review.firstName }} {{ review.lastName }}</label>
         <br>
         {{ review.feedback }}
       </div>
