--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -22,6 +22,12 @@
                   Account
               </a>
             </li>
+            <li>
+              <a  ui-sref-active="active" ui-sref="signup">
+                  <span class="glyphicon glyphicon-user"></span>
+                  Sign Up
+              </a>
+            </li>
 
 
 <!--             <li ng-repeat="item in items" ng-show="!item.auth || isLoggedIn()">
