--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -23,7 +23,7 @@
               </a>
             </li>
             <li>
-              <a ng-show="isAdmin()" ui-sref-active="active" ui-sref="account">
+              <a ng-show="user.isAdmin" ui-sref-active="active" ui-sref="createProduct">
                   <span class="glyphicon glyphicon-user"></span>
                   Create Product
               </a>
