--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -35,14 +35,14 @@
             <div class="form-group">
                 <div class="row">
                     <label class="filterLabel">Sort Selections By: </label>
-                    <select ng-init="selectedCategory.category = categories[0]" ng-model="selectedCategory.category" class="filterBox form-control">
+                    <select ng-init="selectedCategory.category = ''" ng-model="selectedCategory.category" class="filterBox form-control">
                         <option ng-repeat="cat in categories" value="{{cat}}"> {{ cat }}</option>
                         <option value="">All Products</option>
                     </select>
-                     <select ng-init="selectedOrder = orderOptions[0]" ng-model="selectedOrder" class="filterBox form-control">
+                     <select ng-init="selectedOrder = ''" ng-model="selectedOrder" class="filterBox form-control">
                         <option ng-repeat="orderOption in orderOptions" value="{{orderOption | lowercase }}"> {{ orderOption }}</option>
                     </select>                       
-                    <select ng-init="selectedAscDesc = ascDescOptions[0]" ng-model="selectedAscDesc" class="filterBoxLast form-control">
+                    <select ng-init="selectedAscDesc = ''" ng-model="selectedAscDesc" class="filterBoxLast form-control">
                         <option ng-repeat="order in ascDescOptions" value="{{order}}" ng-click="ascDesc()"> {{ order }}</option>
                     </select>
 <!-- 
