--- a/browser/js/createProduct/createProduct.html
+++ b/browser/js/createProduct/createProduct.html
@@ -1,6 +1,6 @@
 <form name="selectCategory" ng-submit='setCategory()'>
 Category: <select ng-model='category' required>
-                    <option value='Paddle'>paddel</option>
+                    <option value='Paddle'>paddle</option>
                     <option value='Ball'>Ball</option>
                     <option value='Case'>Case</option>
                     <option value='Table'>Table</option>
