--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -72,19 +72,16 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1" class="lowerHome">
         	<div class="col-sm-12 col-md-6 col-lg-4 product" ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
-                <div class="row">
-                    <div class="col-xs-12 col-md-12 col-lg-6 prodImage">
-                        <img src="{{ product.imageUrl }}" ui-sref="product({id: product.id})">
-                    </div>
-                    <div class="col-xs-12 col-md-12 col-lg-6 prodDescript">
-                        <h4 class="productLabel">{{ product.name }}<br> {{ product.category }}</h4>
-                        <h4>${{ product.price }}</h4>
-                        <h4 class="productRating">{{ product.rating }} / 5.0</h4>
-                        <br>
-                        <button type="button" class="btn btn-danger productsBtn" ui-sref="product({id: product.id})">View Item</button>
-                        <button type="button" class="btn btn-success productsBtn" ng-click="Cart.add(product.id, 1)">Add to Cart</button>
-                    </div>
-                </div>
+              <div class="prodImage">
+                  <img src="{{ product.imageUrl }}" ui-sref="product({id: product.id})">
+              </div>
+              <div class="prodDescript">
+                  <h4 class="productLabel">{{ product.name }} {{ product.category }}</h4>
+                  <h4>${{ product.price }}</h4>
+                  <h4 class="productRating">{{ product.rating }} / 5.0</h4>
+                  <button type="button" class="btn btn-danger productsBtn" ui-sref="product({id: product.id})">View Item</button>
+                  <button type="button" class="btn btn-success productsBtn" ng-click="Cart.add(product.id, 1)">Add to Cart</button>
+              </div>
             </div>
         </div>
     </div>
