--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -71,7 +71,7 @@
     </div>
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1" class="lowerHome">
-        	<div class="col-sm-12 col-md-6 col-lg-4 product" ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
+        	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 product" ng-repeat="product in products | filter:selectedCategory | orderBy:selectedOrder:ascDesc()">
               <div class="prodImage">
                   <img src="{{ product.imageUrl }}" ui-sref="product({id: product.id})">
               </div>
