--- a/browser/js/order/review/review.form.html
+++ b/browser/js/order/review/review.form.html
@@ -1,10 +1,11 @@
 <section id='review'>
   <form class='reviewForm col-xs-10 col-xs-offset-1' ng-submit='createReview()'>
+      <h3><b>Your Review Here:</b></h3>
       <br>
-      Title:  <input type='text' name='title' ng-model="newReview.title" required>
+      Title:  <input type='text' class="form-control reviewTitle" name='title' ng-model="newReview.title" required>
       <br>
       <br>
-      Score:  <select class="form-control" ng-model="newReview.score" required>
+      Score:  <select class="form-control reviewScore" ng-model="newReview.score" required>
                 <option value="0">0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -14,7 +15,8 @@
               </select>
       <br>
       <br>
-      Feedback: <input type='text' name='feedback' ng-model="newReview.feedback" required>
-      <button type="submit" ng-disabled="playlistForm.$invalid">Create Review</button>
+      Feedback: <textarea class="feedback form-control" rows="7" type='text' name='feedback' ng-model="newReview.feedback" required></textarea>
+      <br>
+      <button class="btn btn-success" type="submit" ng-disabled="playlistForm.$invalid">Create Review</button>
   </form>
 </section>
