--- a/browser/js/order/order.html
+++ b/browser/js/order/order.html
@@ -2,17 +2,19 @@
     <h1>Your Order history</h1>
 
     <div ng-repeat="order in orders" >
-        <div ng-repeat ='product in order'>
+        <h4> Order Time: {{ order.orderDetail.createdAt }} </h4><br>
+        <h4> Ship to: {{ order.orderDetail.address }} </h4><br>
+        <h4> Status: {{ order.orderDetail.status}} </h4><br>
+        <div ng-repeat ='product in order.products'>
         	<img ng-src="{{ product.productDetail.imageUrl }}" height=80 ><br>
         	You have bought {{ product.productDetail.name }}
         	<br>
         	price {{ product.productDetail.price }}
         	<br>
-        	 at {{ product.orderDetail.createdAt }}
-        	<br>
         	You ordered {{ product.orderDetail.quantity }} of this item.
         	<br>
-            <a ui-sref="newReview({productId: {{ product.productDetail.id }} })">Write a review here</a>
+            <a ui-sref="newReview({productId: {{ product.productDetail.id }} })" ng-hide='checkAdmin()'>Write a review here</a>
+            <a ui-sref="newReview({productId: {{ product.productDetail.id }} })" ng-show='checkAdmin()'>Edit</a>
         </div>
     </div>
 
