--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,16 +1,30 @@
-<form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
+<section id='login'>
+    <div class='background'>
+        <div class="col-xs-10 col-xs-offset-1 loginTop">
+        <br>
+            <h1 align='center'>Welcome to the Jungle!</h1>
+        </div>
+        <div class="col-xs-10 col-xs-offset-1 loginMain" >
+            <div class='form'>
+                <form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
 
-    <alert type="danger" ng-show="error">
-        {{ error }}
-    </alert>
+                    <alert type="danger" ng-show="error">
+                        {{ error }}
+                    </alert>
 
-    <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
+                    <div class="form-group">
+                        <label for="email"><h3>Email address</h3></label>
+                        <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="login-password"><h3>Password</h3></label>
+                        <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-default btn-warning">Log In</button>
+                </form>
+            </div>
+        </div>
+    <div class="col-xs-10 col-xs-offset-1 loginBtm">
     </div>
-    <div class="form-group">
-        <label for="login-password">Password</label>
-        <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-default">Log In</button>
-</form>
+</section>
