--- a/browser/js/user/user.html
+++ b/browser/js/user/user.html
@@ -11,6 +11,8 @@
                 	<br>
                 	Address: {{ user.address }}
                 	<br>
+                    <button class="btn btn-primary" ng-click='update(user.id)' ng-show='!user.isAdmin'>Set To Admin</button>
+                    <button class="btn btn-danger" ng-click='update(user.id)' ng-show='user.isAdmin'>Set To Normal User</button>
                     <button class="btn btn-warning" ng-click='removeUser(user.id)'>Remove User</button>
                 </div>
         </div>
